--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,44 +2,39 @@
   text-align: center;
   background-color: $hero-background-color;
 
-  &__overlay {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1600px;
-    height: 600px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../images/studio/hero.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
   &__container {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+
+    @media screen and (min-width: $desktop-width) {
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
   }
 
   &__title {
-    width: 696px;
+    width: 360px;
 
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
 
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.61;
     letter-spacing: 0.06em;
     text-align: center;
     text-transform: uppercase;
 
     color: #ffffff;
+
+    @media screen and (min-width: $desktop-width) {
+      width: 696px;
+      font-size: 44px;
+      line-height: 1.36;
+    }
   }
 }
 
@@ -57,14 +52,84 @@
   border: transparent;
   border-radius: 4px;
 
-  @include transition (background-color, box-shadow);
+  @include transition(background-color, box-shadow);
 
   cursor: pointer;
-
 
   &:hover,
   &:focus {
     background-color: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+}
+
+.hero__overlay {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 480px;
+  height: 400px;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/mobile/studio/hero.jpg);
+
+  @media screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/mobile/studio/hero@2x.jpg);
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    max-width: 768px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/tablet/studio/hero.jpg);
+
+    @media screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/tablet/studio/hero@2x.jpg);
+    }
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    max-width: 1600px;
+    height: 600px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/desktop/studio/hero.jpg);
+
+    @media screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/desktop/studio/hero@2x.jpg);
+    }
   }
 }
