--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,20 +1,34 @@
 .features {
-  padding-top: 94px;
-
+  padding-top: 60px;
   background: $pri-background-color;
 
+  @media screen and (min-width: $desktop-width) {
+    padding-top: 94px;
+  }
 
   &__list {
-    display: flex;
-    justify-content: center;
+    @media screen and (min-width: $tablet-width) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    @media screen and (max-width: 1199px) {
+      padding-bottom: 30px;
+    }
   }
 
   &__item {
-    width: 270px;
-  }
+    margin-bottom: 30px;
 
-  &__item:not(:last-child) {
-    margin-right: 30px;
+    @media screen and (min-width: $tablet-width) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: $desktop-width) {
+      width: calc((100% - 90px) / 4);
+      margin-bottom: 0;
+    }
   }
 
   &__thumb {
@@ -33,7 +47,7 @@
 
   &__title {
     margin-bottom: 10px;
-
+    text-align: center;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -41,6 +55,10 @@
     text-transform: uppercase;
 
     color: $pri-text-color;
+
+    @media screen and (min-width: $tablet-width) {
+      text-align: left;
+    }
   }
 
   &__text {
@@ -48,7 +66,11 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-
+    text-align: center;
     color: $sec-text-color;
+
+    @media screen and (min-width: $tablet-width) {
+      text-align: left;
+    }
   }
 }
