--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,27 +1,42 @@
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   background: $sec-background-color;
 
-
-  &__list {
-    display: flex;
+  @media screen and (min-width: $desktop-width) {
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 
+  
+  &__list {
+    @media screen and (min-width: $tablet-width) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+  }
   &__item {
-    width: 270px;
-    padding-bottom: 30px;
+    max-width: 450px;
+    margin-top: 30px;
+    padding-bottom: 24px;
+    
 
     background-color: $pri-background-color;
-
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-  }
 
-  &__item:not(:last-child) {
-    margin-right: 30px;
+    @media screen and (min-width: $tablet-width) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: $desktop-width) {
+      width: calc((100% - 90px) / 4);
+      margin-top: 50px;
+      padding-bottom: 30px;
+    }
   }
 
   &__name {
@@ -44,37 +59,5 @@
     margin-top: 10px;
 
     color: $sec-text-color;
-  }
-}
-
-.social {
-  display: flex;
-  justify-content: center;
-
-  margin-top: 16px;
-
-  &__item:not(:last-child) {
-    margin-right: 10px;
-  }
-
-  &__link {
-    display: flex;
-    align-items: center;
-    padding: 12px;
-    color: $pri-icon-color;
-
-    border-radius: 50%;
-
-    @include transition (color, background-color);
-  }
-
-  &__icon {
-    fill: currentColor;
-  }
-
-  &__link:hover,
-  &__link:focus {
-    color: $sec-icon-color;
-    background-color: $accent-color;
   }
 }
