--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'components/features';
 @import 'components/we-do';
 @import 'components/team';
+@import 'components/social';
 @import 'components/clients';
 @import 'components/page-footer';
 @import 'components/contacts-footer';
