--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -24,3 +24,8 @@ $cubic: cubic-bezier(0.4, 0, 0.2, 1);
 // Оформление шрифтов
 $pri-font: 'Roboto', sans-serif;
 $sec-font: 'Raleway', sans-serif;
+
+// Точки перелома
+$mobile-width: 480px;
+$tablet-width: 768px;
+$desktop-width: 1200px;
