--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,9 +1,15 @@
 .subscription {
-  width: 570px;
-
+  width: 450px;
   margin-left: auto;
-  padding-top: 72px;
-  padding-bottom: 94px;
+
+  @media screen and (max-width: 1199px) {
+    margin-top: 60px;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    width: 570px;
+  }
 
   &__text {
     margin-bottom: 20px;
@@ -15,17 +21,24 @@
 
     color: #ffffff;
 
-    @include transition (border);
+    @include transition(border);
   }
 
   &__form {
-    display: flex;
-    align-items: center;
+    @media screen and (max-width: 1199px) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    @media screen and (min-width: $desktop-width) {
+      display: flex;
+      align-items: center;
+    }
   }
 
   &__input {
-    width: 358px;
-    margin-right: 12px;
+    width: 450px;
+
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 16px;
@@ -36,16 +49,28 @@
     letter-spacing: 0.03em;
 
     color: rgba(255, 255, 255, 0.6);
-    background-color:$footer-background-color;
+    background-color: $footer-background-color;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 20px;
+    }
+
+    @media screen and (min-width: $desktop-width) {
+      width: 358px;
+      margin-right: 12px;
+    }
   }
 
   &__button {
     display: flex;
     align-items: center;
+
+    margin-left: auto;
+    margin-right: auto;
 
     padding: 10px 29px;
 
