--- a/css/main.css
+++ b/css/main.css
@@ -486,11 +486,18 @@ img {
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   padding-top: 24px;
   padding-bottom: 24px;
   color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .logo--header {
@@ -1073,24 +1080,70 @@ img {
 }
 
 .page-footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #2f303a;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .page-footer {
+    text-align: left;
+  }
 }
 
 .page-footer__flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .page-footer__flex {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-footer__flex {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .page-footer__requisites {
   width: 231px;
-  margin-right: 70px;
 }
 
-.page-footer__requisites .page-footer__address {
+@media screen and (min-width: 1200px) {
+  .page-footer__requisites {
+    margin-right: 70px;
+    text-align: left;
+  }
+}
+
+.page-footer__address {
   margin-top: 20px;
   font-style: normal;
   font-weight: 400;
@@ -1118,8 +1171,24 @@ img {
 
 .join {
   width: 206px;
-  padding-top: 72px;
-  padding-bottom: 100px;
+}
+
+@media screen and (max-width: 767px) {
+  .join {
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .join {
+    padding-top: 5px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .join {
+    text-align: left;
+  }
 }
 
 .join__text {
@@ -1176,10 +1245,21 @@ img {
 }
 
 .subscription {
-  width: 570px;
+  width: 450px;
   margin-left: auto;
-  padding-top: 72px;
-  padding-bottom: 94px;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscription {
+    margin-top: 60px;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription {
+    width: 570px;
+  }
 }
 
 .subscription__text {
@@ -1198,18 +1278,26 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscription__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (max-width: 1199px) {
+  .subscription__form {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .subscription__input {
-  width: 358px;
-  margin-right: 12px;
+  width: 450px;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 16px;
@@ -1225,6 +1313,19 @@ img {
   border-radius: 4px;
 }
 
+@media screen and (max-width: 1199px) {
+  .subscription__input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+
 .subscription__button {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1232,6 +1333,8 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px 29px;
   font-weight: 700;
   font-size: 16px;
