--- a/sass/components/_join.scss
+++ b/sass/components/_join.scss
@@ -1,9 +1,17 @@
 .join {
   width: 206px;
 
-  padding-top: 72px;
-  padding-bottom: 100px;
+  @media screen and (max-width: 767px) {
+    margin-top: 60px;
+  }
 
+  @media screen and (min-width: $tablet-width) and (max-width: 1199px) {
+    padding-top: 5px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    text-align: left;
+  }
 
   &__text {
     margin-bottom: 20px;
@@ -34,7 +42,7 @@
     color: #ffffff;
     background-color: rgba(255, 255, 255, 0.1);
 
-    @include transition (background-color);
+    @include transition(background-color);
   }
 
   &__icon {
