--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,10 +1,12 @@
 // Хедер
 .page-header {
+  position: relative;
   border-bottom: #e5e5e5 1px solid;
   background: $pri-background-color;
 
   &__flex {
     display: flex;
+    justify-content: space-between;
     align-items: center;
   }
 }
