--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'components/container';
 @import 'components/page-header';
 @import 'components/logo';
+@import 'components/menu';
 @import 'components/nav';
 @import 'components/contacts-header';
 @import 'components/section-title';
