--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'components/menu';
 @import 'components/nav';
 @import 'components/contacts-header';
+@import 'components/social-header';
 @import 'components/section-title';
 @import 'components/hero';
 @import 'components/features';
