--- a/css/main.css
+++ b/css/main.css
@@ -514,7 +514,18 @@ img {
   display: -ms-flexbox;
   display: flex;
   font-weight: 500;
-  margin-left: 88px;
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    margin-left: 88px;
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
