--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -2,7 +2,17 @@
   display: flex;
 
   font-weight: 500;
-  margin-left: 88px;
+
+  @media screen and (min-width: $tablet-width) {
+    justify-content: space-between;
+   
+    width: 100%;
+    margin-left: 88px;
+    padding-top: 21px;
+    padding-bottom: 21px;
+    
+    
+  }
 
   @media screen and (min-width: $desktop-width) {
     margin-left: 93px;
