--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -1,11 +1,15 @@
 .section-title {
-  // margin-bottom: 50px;
+  margin-top: 0;
+  margin-bottom: 30px;
 
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
   text-align: center;
-  letter-spacing: 0.03em;
-
   color: $pri-text-color;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.7;
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
