--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,23 +1,19 @@
 // Лого
 .logo {
+  display: flex;
+  align-items: center;
   font-family: $sec-font;
   font-weight: 700;
-  font-size: 24px;
-  line-height: 1.16;
-
-  padding-top: 24px;
-  padding-bottom: 24px;
+  font-size: 26px;
+  line-height: 1.19;
 
   color: #2196f3;
 
-  @media screen and (min-width: $desktop-width) {
-    font-size: 26px;
-  line-height: 1.19;
-  }
   // Лого-хедер
   &--header {
     color: #000000;
   }
+  
   // Лого-футер
   &--footer {
     color: #ffffff;
