--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,35 +1,24 @@
 // Главная навигация
 .nav {
-  @media screen and (max-width: 767px) {
-    margin-bottom: 302px;
-  }
+  display: flex;
+  align-items: center;
 
-  @media screen and (min-width: $tablet-width) {
+  &__list {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-  }
-}
 
-.nav__list {
-  @media screen and (min-width: $tablet-width) {
-    display: flex;
-    align-items: center;
+    margin-left: 93px;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
 
 .nav__item:not(:last-child) {
-  @media screen and (max-width: 767px) {
-    margin-bottom: 32px;
-  }
   margin-right: 50px;
 }
 
 .nav__link {
-  @media screen and (max-width: 767px) {
-    font-size: 40px;
-  }
-
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
 
@@ -38,8 +27,8 @@
 
   color: $pri-text-color;
 
-  @include transition(color);
-
+  @include transition (color);
+  
   &:hover,
   &:focus {
     color: $accent-color;
@@ -47,22 +36,20 @@
 }
 
 .nav__link--current {
+  position: relative;
   color: $accent-color;
 
-  @media screen and(min-width: $tablet-width) {
-    position: relative;
 
-    &::after {
-      position: absolute;
-      bottom: -1px;
-      left: 0;
+  &::after {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
 
-      content: "";
-      width: 100%;
-      height: 4px;
+  content: "";
+  width: 100%;
+  height: 4px;
 
-      background-color: $accent-color;
-      border-radius: 2px;
-    }
+  background-color: $accent-color;
+  border-radius: 2px;
   }
 }
