--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,60 +4,98 @@
 
   background: $sec-background-color;
 
-  @media screen and (min-width: $desktop-width) {
+  @media screen and (min-width: $desktop) {
     padding-top: 94px;
     padding-bottom: 94px;
   }
 
-  
   &__list {
-    @media screen and (min-width: $tablet-width) {
+    @media screen and (min-width: $tablet) {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
     }
+
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+      margin-top: -30px;
+    }
   }
+
   &__item {
     max-width: 450px;
-    margin-top: 30px;
     padding-bottom: 24px;
-    
 
     background-color: $pri-background-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
-    @media screen and (min-width: $tablet-width) and (max-width: 1199px) {
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
       width: calc((100% - 30px) / 2);
     }
 
-    @media screen and (min-width: $desktop-width) {
+    @media screen and (min-width: $desktop) {
       width: calc((100% - 90px) / 4);
-      margin-top: 50px;
       padding-bottom: 30px;
+    }
+
+    @media screen and (max-width: 1199px) {
+      margin-top: 30px;
     }
   }
 
   &__name {
+    margin-top: 30px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
 
-    margin-top: 30px;
+    color: $pri-text-color;
   }
 
   &__profession {
+    margin-top: 10px;
+
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
 
-    margin-top: 10px;
-
     color: $sec-text-color;
+  }
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 16px;
+
+  &__item:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    color: $pri-icon-color;
+
+    border-radius: 50%;
+
+    @include transition(color, background-color);
+  }
+
+  &__icon {
+    fill: currentColor;
+  }
+
+  &__link:hover,
+  &__link:focus {
+    color: $sec-icon-color;
+    background-color: $accent-color;
   }
 }
