--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -26,6 +26,6 @@ $pri-font: 'Roboto', sans-serif;
 $sec-font: 'Raleway', sans-serif;
 
 // Точки перелома
-$mobile-width: 480px;
-$tablet-width: 768px;
-$desktop-width: 1200px;
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1200px;
