--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'components/logo';
 @import 'components/nav';
 @import 'components/contacts-header';
+@import 'components/mob-menu';
 @import 'components/section-title';
 @import 'components/hero';
 @import 'components/features';
