--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,16 @@
 // Лого
 .logo {
-  padding: 26px 0;
+  padding: 16px 0;
   font-family: $sec-font;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.17;
 
   color: #2196f3;
+
+  @media screen and (min-width: $tablet) {
+    padding: 26px 0;
+  }
 
   @media screen and (min-width: $desktop) {
     font-size: 26px;
