Завершает адаптивку хедера

--- a/css/main.css
+++ b/css/main.css
@@ -640,8 +640,10 @@ img {
   }
 }
 
-.menu.is-open {
-  display: block;
+@media screen and (max-width: 767px) {
+  .menu.is-open {
+    display: block;
+  }
 }
 
 .menu-button {
