--- a/sass/components/modal/_checkbox.scss
+++ b/sass/components/modal/_checkbox.scss
@@ -7,15 +7,18 @@
     margin-bottom: 30px;
 
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.71;
     letter-spacing: 0.03em;
 
     color: $sec-text-color;
+
+    @media screen and (min-width: $desktop) {
+      font-size: 14px;
+    }
   }
 
   &__link {
-    margin-left: 6px;
     text-decoration-line: underline;
     color: $accent-color;
   }
