--- a/css/main.css
+++ b/css/main.css
@@ -658,6 +658,7 @@ img {
 
 .menu-button:hover, .menu-button:focus {
   color: #2196f3;
+  outline: none;
 }
 
 .menu-button .menu-icon {
@@ -1567,8 +1568,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  height: 581px;
+  width: 450px;
   padding: 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1577,6 +1577,13 @@ img {
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    max-width: 528px;
+  }
 }
 
 .modal__title {
@@ -1733,14 +1740,19 @@ img {
   align-items: center;
   margin-bottom: 30px;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal__checkbox-label {
+    font-size: 14px;
+  }
+}
+
 .modal__link {
-  margin-left: 6px;
   text-decoration-line: underline;
   color: #2196f3;
 }
