--- a/sass/components/modal/_info.scss
+++ b/sass/components/modal/_info.scss
@@ -3,9 +3,14 @@
   top: 50%;
   left: 50%;
 
-  
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  // height: 609px;
+
+  @media screen and (min-width: $desktop){
+    width: 528px;
+  max-width: 528px;
+  }
+
   padding: 40px;
 
   background-color: $pri-background-color;
@@ -14,7 +19,7 @@
   border-radius: 4px;
 
   transform: translate(-50%, -50%) scale(1) rotate(360deg);
-  @include transition (transform);
+  @include transition(transform);
 
   &__title {
     margin-bottom: 12px;
@@ -57,7 +62,7 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
 
-    @include transition (border-color);
+    @include transition(border-color);
   }
 
   &__icon {
@@ -65,7 +70,7 @@
     top: 50%;
     left: 14px;
 
-    @include transition (fill);
+    @include transition(fill);
 
     transform: translateY(-50%);
 
