--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,9 +1,15 @@
 .filter {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  align-content: flex-start;
 
-  margin-bottom: 50px;
+  @media screen and (min-width: $tablet) {
+    justify-content: center;
+  }
 
+  &__item{
+    margin-bottom: 15px;
+  }
 
   &__item:not(:last-child) {
     margin-right: 8px;
