--- a/css/main.css
+++ b/css/main.css
@@ -1429,14 +1429,31 @@ img {
 }
 
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    justify-content: center;
+  }
+}
+
+.filter__item {
+  margin-bottom: 15px;
 }
 
 .filter__item:not(:last-child) {
@@ -1469,15 +1486,40 @@ img {
 .progects {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 40px;
   margin-right: -30px;
   margin-bottom: -30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .progects {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .progects {
+    margin-top: 50px;
+  }
 }
 
 .progects__item {
   margin-right: 30px;
   margin-bottom: 30px;
-  flex-basis: calc(100% / 3 - 30px);
+  flex-basis: 100%;
   border: 1px solid #eeeeee;
+}
+
+@media screen and (min-width: 768px) {
+  .progects__item {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .progects__item {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .progects__link {
