--- a/sass/components/_progects.scss
+++ b/sass/components/_progects.scss
@@ -2,15 +2,31 @@
   display: flex;
   flex-wrap: wrap;
 
+  margin-top: 40px;
   margin-right: -30px;
   margin-bottom: -30px;
 
+  @media screen and (min-width: $desktop) {
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-top: 50px;
+  }
 
   &__item {
     margin-right: 30px;
     margin-bottom: 30px;
 
-    flex-basis: calc(100% / 3 - 30px);
+    flex-basis: 100%;
+
+    @media screen and (min-width: $tablet) {
+      flex-basis: calc(100% / 2 - 30px);
+    }
+
+    @media screen and (min-width: $desktop) {
+      flex-basis: calc(100% / 3 - 30px);
+    }
 
     border: 1px solid #eeeeee;
   }
