--- a/css/main.css
+++ b/css/main.css
@@ -632,7 +632,6 @@ img {
     left: 0;
     width: 100%;
     min-height: 100vh;
-    padding: 48px 40px;
     line-height: 1.7;
     letter-spacing: 0.02em;
     background-color: #ffffff;
@@ -717,8 +716,12 @@ img {
   color: #ffffff;
 }
 
-.mob-nav {
-  margin-bottom: 300px;
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  padding: 48px 40px;
 }
 
 .mob-nav__list {
