--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -1,5 +1,11 @@
-.mob-nav {
-  margin-bottom: 300px;
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  min-height: 100vh;
+  padding: 48px 40px;
+
 }
 
 .mob-nav__list {
