--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -44,6 +44,13 @@
     }
   }
 
+  .team-card__photo {
+    margin-bottom: 30px;
+    display: block;
+    width: 100%;
+    height: auto;
+  } 
+  
   &__name {
     margin-top: 30px;
     font-weight: 500;
