--- a/css/main.css
+++ b/css/main.css
@@ -1462,8 +1462,10 @@ img {
   }
 }
 
-.filter__item {
-  margin-bottom: 15px;
+@media screen and (max-width: 767px) {
+  .filter__item {
+    margin-bottom: 15px;
+  }
 }
 
 .filter__item:not(:last-child) {
@@ -1514,9 +1516,10 @@ img {
 }
 
 .progects__item {
+  flex-basis: 100%;
   margin-right: 30px;
   margin-bottom: 30px;
-  flex-basis: 100%;
+  align-items: center;
   border: 1px solid #eeeeee;
 }
 
