--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -8,7 +8,9 @@
   }
 
   &__item{
-    margin-bottom: 15px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 15px;
+    } 
   }
 
   &__item:not(:last-child) {
