--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,12 +1,17 @@
 .filter {
   display: flex;
   flex-wrap: wrap;
-  align-content: flex-start;
+  margin-bottom: 15px;
 
   @media screen and (min-width: $tablet) {
     justify-content: center;
+    margin-bottom: 30px;
   }
 
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 50px;
+  }
+  
   &__item{
     @media screen and (max-width: 767px) {
       margin-bottom: 15px;
@@ -18,6 +23,7 @@
   }
 
   &__button {
+    margin-bottom: 15px;
     padding: 6px 22px;
 
     font-weight: 500;
