--- a/css/main.css
+++ b/css/main.css
@@ -1453,12 +1453,19 @@ img {
 .filter {
   display: flex;
   flex-wrap: wrap;
-  align-content: flex-start;
+  margin-bottom: 15px;
 }
 
 @media screen and (min-width: 768px) {
   .filter {
     justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter {
+    margin-bottom: 50px;
   }
 }
 
@@ -1473,6 +1480,7 @@ img {
 }
 
 .filter__button {
+  margin-bottom: 15px;
   padding: 6px 22px;
   font-weight: 500;
   font-size: 16px;
@@ -1496,16 +1504,15 @@ img {
 }
 
 .progects {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 40px;
-  margin-right: -30px;
   margin-bottom: -30px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .progects {
-    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: -15px;
   }
 }
 
@@ -1516,22 +1523,21 @@ img {
 }
 
 .progects__item {
-  flex-basis: 100%;
-  margin-right: 30px;
-  margin-bottom: 30px;
   align-items: center;
-  border: 1px solid #eeeeee;
+  margin-bottom: 30px;
+  border: 1px solid #eee;
 }
 
 @media screen and (min-width: 768px) {
   .progects__item {
-    flex-basis: calc(100% / 2 - 30px);
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .progects__item {
-    flex-basis: calc(100% / 3 - 30px);
+    width: calc((100% - 6 * 15px) / 3);
   }
 }
 
