--- a/sass/components/_progects.scss
+++ b/sass/components/_progects.scss
@@ -1,13 +1,12 @@
 .progects {
-  display: flex;
-  flex-wrap: wrap;
-
-  margin-top: 40px;
-  margin-right: -30px;
   margin-bottom: -30px;
 
-  @media screen and (min-width: $desktop) {
-    margin-top: 30px;
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: space-between;
+    margin: -15px;
   }
 
   @media screen and (min-width: $desktop) {
@@ -15,22 +14,18 @@
   }
 
   &__item {
-    flex-basis: 100%;
-
-    margin-right: 30px;
-    margin-bottom: 30px;
-    
     align-items: center;
+    margin-bottom: 30px;
+    border: 1px solid #eee;
 
     @media screen and (min-width: $tablet) {
-      flex-basis: calc(100% / 2 - 30px);
+      width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
     }
 
     @media screen and (min-width: $desktop) {
-      flex-basis: calc(100% / 3 - 30px);
+      width: calc((100% - 6 * 15px) / 3);
     }
-
-    border: 1px solid #eeeeee;
   }
 
   &__link {
